...

        <LinearLayout android:id="@+id/message_packs_card" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ui_gap_group" android:background="@drawable/bg_card"
            android:orientation="vertical" android:padding="@dimen/ui_gap_group">
            <TextView style="@style/Widget.SubHub.SectionHeader"
                android:text="@string/subliminal_packs_title" />
            <com.subhub.app.util.SelectionGrid android:id="@+id/message_packs_grid" android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <CheckBox android:id="@+id/pack_obedience" style="@style/Widget.SubHub.GridSelectionTile" android:layout_width="0dp"
                android:layout_height="wrap_content" android:minHeight="@dimen/control_min_height" android:buttonTint="@color/toggle_tint"
                android:text="@string/subliminal_pack_obedience" />
            <CheckBox android:id="@+id/pack_focus" style="@style/Widget.SubHub.GridSelectionTile" android:layout_width="0dp"
                android:layout_height="wrap_content" android:minHeight="@dimen/control_min_height" android:buttonTint="@color/toggle_tint"
...
